--- a/deployment-config.yml
+++ b/deployment-config.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nodejs-app
+  name: nodejs-hello-deployment
 spec:
   replicas: 1
   selector:
@@ -13,8 +13,8 @@ spec:
         app: nodejs-app
     spec:
       containers:
-        - name: nodejs-app-container
-          image: forketyfork/hello-world
+        - name: nodejs-hello-app
+          image: hello-world:latest
           imagePullPolicy: Never
           ports:
             - containerPort: 3000
