--- a/deployment-config.yml
+++ b/deployment-config.yml
@@ -8,11 +8,13 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nodejs-app
+      app.kubernetes.io/name: io-heavy-app
+      app.kubernetes.io/component: app
   template:
     metadata:
       labels:
-        app: nodejs-app
+        app.kubernetes.io/name: io-heavy-app
+        app.kubernetes.io/component: app
     spec:
       containers:
         - name: nodejs-hello-app
@@ -40,11 +42,11 @@ metadata:
     service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "100"
 spec:
   type: LoadBalancer
+  selector:
+    app: io-heavy-app
   ports:
   - port: 3000
     protocol: TCP
-  selector:
-    app: nodejs-app
 ---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
@@ -57,7 +59,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: nodejs-app
+    name: io-heavy-app
   minReplicas: 1
   maxReplicas: 10
   metrics:
