--- a/deployment-config.yml
+++ b/deployment-config.yml
@@ -31,6 +31,12 @@ spec:
             limits:
               cpu: "0.5"
               memory: "256Mi"
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 3000
+            initialDelaySeconds: 15
+            periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
