--- a/gateway-api-config.yml
+++ b/gateway-api-config.yml
@@ -1,28 +1,18 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: io-heavy-app
+  name: shared-gateway
+  namespace: infra-ns
 spec:
   gatewayClassName: nginx
   listeners:
   - name: http
     port: 80
+    hostname: "mktplace.com"
     protocol: HTTP
----
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: io-heavy-app
-spec:
-  parentRefs:
-  - name: io-heavy-app
-  hostnames:
-  - "io-heavy.example.com"
-  rules:
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /
-    backendRefs:
-    - name: io-heavy-app
-      port: 80
+    allowedRoutes:
+      namespaces:
+        from: Selector
+        selector:
+          matchLabels:
+            shared-gateway-access: "true"
