deploys nginx gateway fabric svc as nodeport

--- a/http-route-config.yml
+++ b/http-route-config.yml
@@ -8,6 +8,8 @@ spec:
   parentRefs:
   - name: shared-gateway
     namespace: infra-ns
+  hostnames:
+    - "my-mkt-place.com"
   rules:
   - matches:
     - path:
