--- a/deployment-config.yml
+++ b/deployment-config.yml
@@ -70,7 +70,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: nodejs-app
+    name: home
   minReplicas: 1
   maxReplicas: 10
   metrics:
