--- a/deployment-config.yml
+++ b/deployment-config.yml
@@ -41,7 +41,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: home
+  name: home-test
   namespace: site-ns
   labels:
     app.kubernetes.io/name: nodejs-app
@@ -55,8 +55,10 @@ spec:
   selector:
     app.kubernetes.io/name: nodejs-app
   ports:
-    - port: 3000
+    - port: 80
+      targetPort: 3000
       protocol: TCP
+      name: http
 ---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
