--- a/gateway-api-config.yml
+++ b/gateway-api-config.yml
@@ -15,3 +15,23 @@ spec:
         selector:
           matchLabels:
             shared-gateway-access: "true"
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: home
+  namespace: site-ns
+spec:
+  parentRefs:
+  - name: shared-gateway
+    namespace: infra-ns
+  # hostnames:
+  #   - "my-mkt-place.com"
+  rules:
+  - matches:
+    - path:
+        value: /
+    backendRefs:
+    - name: home-test
+      namespace: site-ns
+      port: 80
