--- a/deployment-config.yml
+++ b/deployment-config.yml
@@ -33,7 +33,7 @@ spec:
               memory: "256Mi"
           livenessProbe:
             httpGet:
-              path: /api/health
+              path: /health
               port: 3000
             initialDelaySeconds: 15
             periodSeconds: 5
