--- a/src/checkout/package.json
+++ b/src/checkout/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "description": "Node.js on Docker",
+  "description": "checkout service",
   "author": "Bruno Fontes",
   "main": "server.js",
   "scripts": {
