--- a/gateway-api-config.yml
+++ b/gateway-api-config.yml
@@ -25,13 +25,29 @@ spec:
   parentRefs:
   - name: shared-gateway
     namespace: infra-ns
-  # hostnames:
-  #   - "my-mkt-place.com"
   rules:
   - matches:
     - path:
         value: /site/home/ # this route needs to be defined in the api as well
     backendRefs:
     - name: home
+      namespace: site-ns
+      port: 80
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: checkout
+  namespace: site-ns
+spec:
+  parentRefs:
+  - name: shared-gateway
+    namespace: infra-ns
+  rules:
+  - matches:
+    - path:
+        value: /site/checkout/ # this route needs to be defined in the api as well
+    backendRefs:
+    - name: checkout
       namespace: site-ns
       port: 80
