--- a/src/green-home/deployment-config.yml
+++ b/src/green-home/deployment-config.yml
@@ -1,26 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: canary-home
+  name: green-home
   namespace: site-ns
   labels:
-    app.kubernetes.io/name: canary-home
+    app.kubernetes.io/name: green-home
     app.kubernetes.io/component: app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: canary-home
+      app.kubernetes.io/name: green-home
       app.kubernetes.io/component: app
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: canary-home
+        app.kubernetes.io/name: green-home
         app.kubernetes.io/component: app
     spec:
       containers:
-        - name: canary-home-service
-          image: canary-home-service:latest
+        - name: green-home-service
+          image: green-home-service:latest
           imagePullPolicy: Never
           ports:
             - containerPort: 3000
@@ -41,10 +41,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: canary-home
+  name: green-home
   namespace: site-ns
   labels:
-    app.kubernetes.io/name: canary-home
+    app.kubernetes.io/name: green-home
     app.kubernetes.io/component: app
   annotations:
     service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
@@ -53,7 +53,7 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app.kubernetes.io/name: canary-home
+    app.kubernetes.io/name: green-home
   ports:
     - port: 80
       targetPort: 3000
@@ -63,16 +63,16 @@ spec:
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: canary-home
+  name: green-home
   namespace: site-ns
   labels:
-    app.kubernetes.io/name: canary-home
+    app.kubernetes.io/name: green-home
     app.kubernetes.io/component: app
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: canary-home
+    name: green-home
   minReplicas: 1
   maxReplicas: 10
   metrics:
